[project]
name = "wenjiewang623-github-io"
version = "0.0.1"
description = "intial website for Wenjie Wang Github"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = "3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "wenjiewang623"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
